Parte 3 (#2)
* feat: CRUD de competências do candidato

* feat: CRUD de vagas

* feat: carregamento dos dados atuais na atualização do cadastro

* feat: validação de token

* feat: visualização de vagas pelo candidato