@@ -1,17 +1,22 @@
 
 import java.net.*;
 import java.io.*;
+import java.lang.reflect.InvocationTargetException;
 import org.json.JSONObject;
 import java.sql.Connection;
 import java.sql.DriverManager;
 import java.sql.SQLException;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
+import java.sql.Statement;
+import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.UUID;
 import java.util.logging.Level;
 import java.util.logging.Logger;
+import org.json.JSONArray;
 
 public class Server extends Thread {
 
@@ -19,9 +24,9 @@ public class Server extends Thread {
     private final Connection conn;
     private final Map<String, String> tokens = new HashMap<>();
 
-    public static void main(String[] args) throws IOException, ClassNotFoundException, InstantiationException, IllegalAccessException, SQLException {
+    public static void main(String[] args) throws IOException, ClassNotFoundException, InstantiationException, IllegalAccessException, SQLException, NoSuchMethodException, IllegalArgumentException, InvocationTargetException {
         // Registra o driver do MySQL
-        Class.forName("com.mysql.cj.jdbc.Driver").newInstance();
+        Class.forName("com.mysql.cj.jdbc.Driver").getDeclaredConstructor().newInstance();
 
         ServerSocket serverSocket = null;
 
@@ -51,7 +56,9 @@ public class Server extends Thread {
 
         } finally {
             try {
-                serverSocket.close();
+                if (serverSocket != null) {
+                    serverSocket.close();
+                }
             } catch (IOException e) {
                 System.err.println("Não foi possível fechar a porta: " + porta);
                 System.exit(1);
@@ -80,6 +87,17 @@ public class Server extends Thread {
                 JSONObject requisicao = new JSONObject(inputLine);
                 JSONObject resposta = new JSONObject();
                 resposta.put("operacao", requisicao.getString("operacao"));
+
+                String operacao = requisicao.getString("operacao");
+                if (!operacao.contains("loginCandidato") && !operacao.contains("loginEmpresa") && !operacao.contains("cadastrarCandidato") && !operacao.contains("cadastrarEmpresa")) {
+                    if (!requisicao.has("token") || !this.tokens.containsKey(requisicao.getString("token"))) {
+                        resposta.put("status", "401");
+                        resposta.put("mensagem", "Token inválido");
+                        System.out.println("Servidor enviou: " + resposta);
+                        out.println(resposta);
+                        continue;
+                    }
+                }
 
                 switch (requisicao.getString("operacao")) {
                     case "cadastrarCandidato":
@@ -325,6 +343,427 @@ public class Server extends Thread {
                         } catch (Exception ex) {
                             ex.printStackTrace();
                             resposta.put("status", 404);
+                            resposta.put("mensagem", "Erro");
+                        }
+                        break;
+
+                    case "visualizarCompetenciaExperiencia":
+                        try (PreparedStatement candidatoPS = conn.prepareStatement("SELECT id_candidato FROM candidato WHERE email = ?;")) {
+                            candidatoPS.setString(1, requisicao.getString("email"));
+                            try (ResultSet candidato = candidatoPS.executeQuery()) {
+                                if (candidato.next()) {
+                                    try (PreparedStatement candidatoCompetenciaPS = conn.prepareStatement("SELECT id_competencia, experiencia FROM candidatocompetencia where id_candidato = ?;")) {
+                                        candidatoCompetenciaPS.setInt(1, candidato.getInt("id_candidato"));
+                                        try (ResultSet candidatoCompetenciaRS = candidatoCompetenciaPS.executeQuery()) {
+                                            JSONArray competenciasExperiencias = new JSONArray();
+                                            while (candidatoCompetenciaRS.next()) {
+                                                try (PreparedStatement competenciaPS = conn.prepareStatement("SELECT competencia FROM competencia where id_competencia = ?;")) {
+                                                    competenciaPS.setInt(1, candidatoCompetenciaRS.getInt("id_competencia"));
+                                                    try (ResultSet competenciaRS = competenciaPS.executeQuery()) {
+                                                        if (competenciaRS.next()) {
+                                                            JSONObject competenciaExperiencia = new JSONObject();
+                                                            competenciaExperiencia.put("competencia", competenciaRS.getString("competencia"));
+                                                            competenciaExperiencia.put("experiencia", candidatoCompetenciaRS.getString("experiencia"));
+                                                            competenciasExperiencias.put(competenciaExperiencia);
+                                                        } else {
+                                                            resposta.put("status", 422);
+                                                            resposta.put("mensagem", "Competência não encontrada");
+                                                        }
+                                                    }
+                                                }
+                                            }
+                                            resposta.put("status", 200);
+                                            resposta.put("competenciaExperiencia", competenciasExperiencias);
+                                        }
+                                    }
+                                } else {
+                                    resposta.put("status", 422);
+                                    resposta.put("mensagem", "Candidato não encontrado");
+                                }
+                            }
+                        } catch (Exception ex) {
+                            ex.printStackTrace();
+                            resposta.put("status", 404);
+                            resposta.put("mensagem", "Erro");
+                        }
+                        break;
+
+                    case "cadastrarCompetenciaExperiencia":
+                        try (PreparedStatement candidatoPS = conn.prepareStatement("SELECT id_candidato FROM candidato WHERE email = ?;")) {
+                            candidatoPS.setString(1, requisicao.getString("email"));
+                            try (ResultSet candidato = candidatoPS.executeQuery()) {
+                                if (candidato.next()) {
+                                    JSONArray competenciasExperiencias = requisicao.getJSONArray("competenciaExperiencia");
+                                    for (int i = 0; i < competenciasExperiencias.length(); i++) {
+                                        JSONObject competenciaExperiencia = (JSONObject) competenciasExperiencias.get(i);
+                                        try (PreparedStatement competenciaPS = conn.prepareStatement("SELECT id_competencia FROM competencia WHERE competencia = ?;")) {
+                                            competenciaPS.setString(1, competenciaExperiencia.getString("competencia"));
+                                            try (ResultSet competencia = competenciaPS.executeQuery()) {
+                                                if (competencia.next()) {
+                                                    try (PreparedStatement candidatoCompetenciaPS = conn.prepareStatement("SELECT id_candidato_competencia FROM candidatocompetencia WHERE id_candidato = ? AND id_competencia = ?;")) {
+                                                        candidatoCompetenciaPS.setInt(1, candidato.getInt("id_candidato"));
+                                                        candidatoCompetenciaPS.setInt(2, competencia.getInt("id_competencia"));
+                                                        try (ResultSet candidatoCompetencia = candidatoCompetenciaPS.executeQuery()) {
+                                                            if (!candidatoCompetencia.next()) {
+                                                                try (PreparedStatement preparedStatement = conn.prepareStatement("INSERT INTO candidatocompetencia (id_candidato, id_competencia, experiencia) VALUES (?, ?, ?);")) {
+                                                                    preparedStatement.setInt(1, candidato.getInt("id_candidato"));
+                                                                    preparedStatement.setInt(2, competencia.getInt("id_competencia"));
+                                                                    preparedStatement.setInt(3, competenciaExperiencia.getInt("experiencia"));
+                                                                    preparedStatement.executeUpdate();
+                                                                }
+                                                                resposta.put("status", 201);
+                                                                resposta.put("mensagem", "Competencia/Experiencia cadastrada com sucesso");
+                                                            } else {
+                                                                resposta.put("status", 422);
+                                                                resposta.put("mensagem", "Competência já cadastrada");
+                                                            }
+                                                        }
+                                                    }
+                                                } else {
+                                                    resposta.put("status", 422);
+                                                    resposta.put("mensagem", "Competência não encontrada");
+                                                }
+                                            }
+                                        }
+                                    }
+                                } else {
+                                    resposta.put("status", 422);
+                                    resposta.put("mensagem", "Candidato não encontrado");
+                                }
+                            }
+                        } catch (Exception ex) {
+                            ex.printStackTrace();
+                            resposta.put("status", 422);
+                            resposta.put("mensagem", "Erro");
+                        }
+                        break;
+
+                    case "atualizarCompetenciaExperiencia":
+                        try (PreparedStatement candidatoPS = conn.prepareStatement("SELECT id_candidato FROM candidato WHERE email = ?;")) {
+                            candidatoPS.setString(1, requisicao.getString("email"));
+                            try (ResultSet candidato = candidatoPS.executeQuery()) {
+                                if (candidato.next()) {
+                                    JSONArray competenciasExperiencias = requisicao.getJSONArray("competenciaExperiencia");
+                                    for (int i = 0; i < competenciasExperiencias.length(); i++) {
+                                        JSONObject competenciaExperiencia = (JSONObject) competenciasExperiencias.get(i);
+                                        try (PreparedStatement competenciaPS = conn.prepareStatement("SELECT id_competencia FROM competencia WHERE competencia = ?;")) {
+                                            competenciaPS.setString(1, competenciaExperiencia.getString("competencia"));
+                                            try (ResultSet competencia = competenciaPS.executeQuery()) {
+                                                if (competencia.next()) {
+                                                    try (PreparedStatement candidatoCompetenciaPS = conn.prepareStatement("SELECT id_candidato_competencia FROM candidatocompetencia WHERE id_candidato = ? AND id_competencia = ?;")) {
+                                                        candidatoCompetenciaPS.setInt(1, candidato.getInt("id_candidato"));
+                                                        candidatoCompetenciaPS.setInt(2, competencia.getInt("id_competencia"));
+                                                        try (ResultSet candidatoCompetencia = candidatoCompetenciaPS.executeQuery()) {
+                                                            if (candidatoCompetencia.next()) {
+                                                                try (PreparedStatement preparedStatement = conn.prepareStatement("UPDATE candidatocompetencia SET experiencia = ? WHERE id_candidato_competencia = ?")) {
+                                                                    preparedStatement.setInt(1, competenciaExperiencia.getInt("experiencia"));
+                                                                    preparedStatement.setInt(2, candidatoCompetencia.getInt("id_candidato_competencia"));
+                                                                    preparedStatement.executeUpdate();
+                                                                }
+                                                                resposta.put("status", 201);
+                                                                resposta.put("mensagem", "Competencia/Experiencia atualizada com sucesso");
+                                                            } else {
+                                                                resposta.put("status", 422);
+                                                                resposta.put("mensagem", "Competência ainda não cadastrada");
+                                                            }
+                                                        }
+                                                    }
+                                                } else {
+                                                    resposta.put("status", 422);
+                                                    resposta.put("mensagem", "Competência não encontrada");
+                                                }
+                                            }
+                                        }
+                                    }
+                                } else {
+                                    resposta.put("status", 422);
+                                    resposta.put("mensagem", "Candidato não encontrado");
+                                }
+                            }
+                        } catch (Exception ex) {
+                            ex.printStackTrace();
+                            resposta.put("status", 422);
+                            resposta.put("mensagem", "Erro");
+                        }
+                        break;
+
+                    case "apagarCompetenciaExperiencia":
+                        try (PreparedStatement candidatoPS = conn.prepareStatement("SELECT id_candidato FROM candidato WHERE email = ?;")) {
+                            candidatoPS.setString(1, requisicao.getString("email"));
+                            try (ResultSet candidato = candidatoPS.executeQuery()) {
+                                if (candidato.next()) {
+                                    JSONArray competenciasExperiencias = requisicao.getJSONArray("competenciaExperiencia");
+                                    for (int i = 0; i < competenciasExperiencias.length(); i++) {
+                                        JSONObject competenciaExperiencia = (JSONObject) competenciasExperiencias.get(i);
+                                        try (PreparedStatement competenciaPS = conn.prepareStatement("SELECT id_competencia FROM competencia WHERE competencia = ?;")) {
+                                            competenciaPS.setString(1, competenciaExperiencia.getString("competencia"));
+                                            try (ResultSet competencia = competenciaPS.executeQuery()) {
+                                                if (competencia.next()) {
+                                                    try (PreparedStatement candidatoCompetenciaPS = conn.prepareStatement("SELECT id_candidato_competencia FROM candidatocompetencia WHERE id_candidato = ? AND id_competencia = ?;")) {
+                                                        candidatoCompetenciaPS.setInt(1, candidato.getInt("id_candidato"));
+                                                        candidatoCompetenciaPS.setInt(2, competencia.getInt("id_competencia"));
+                                                        try (ResultSet candidatoCompetencia = candidatoCompetenciaPS.executeQuery()) {
+                                                            if (candidatoCompetencia.next()) {
+                                                                try (PreparedStatement preparedStatement = conn.prepareStatement("DELETE FROM candidatocompetencia WHERE id_candidato_competencia = ?")) {
+                                                                    preparedStatement.setInt(1, candidatoCompetencia.getInt("id_candidato_competencia"));
+                                                                    preparedStatement.executeUpdate();
+                                                                }
+                                                                resposta.put("status", 201);
+                                                                resposta.put("mensagem", "Competencia/Experiencia apagada com sucesso");
+                                                            } else {
+                                                                resposta.put("status", 422);
+                                                                resposta.put("mensagem", "Competência ainda não cadastrada");
+                                                            }
+                                                        }
+                                                    }
+                                                } else {
+                                                    resposta.put("status", 422);
+                                                    resposta.put("mensagem", "Competência não encontrada");
+                                                }
+                                            }
+                                        }
+                                    }
+                                } else {
+                                    resposta.put("status", 422);
+                                    resposta.put("mensagem", "Candidato não encontrado");
+                                }
+                            }
+                        } catch (Exception ex) {
+                            ex.printStackTrace();
+                            resposta.put("status", 422);
+                            resposta.put("mensagem", "Erro");
+                        }
+                        break;
+
+                    case "listarVagas":
+                        try (PreparedStatement empresaPS = conn.prepareStatement("SELECT id_empresa FROM empresa WHERE email = ?;")) {
+                            empresaPS.setString(1, requisicao.getString("email"));
+                            try (ResultSet empresa = empresaPS.executeQuery()) {
+                                if (empresa.next()) {
+
+                                    try (PreparedStatement vagasPS = conn.prepareStatement("SELECT id_vaga, nome FROM vaga where id_empresa = ?;")) {
+                                        vagasPS.setInt(1, empresa.getInt("id_empresa"));
+                                        try (ResultSet vagasRS = vagasPS.executeQuery()) {
+                                            JSONArray vagas = new JSONArray();
+                                            while (vagasRS.next()) {
+                                                JSONObject vaga = new JSONObject();
+                                                vaga.put("nomeVaga", vagasRS.getString("nome"));
+                                                vaga.put("idVaga", vagasRS.getInt("id_vaga"));
+                                                vagas.put(vaga);
+                                            }
+                                            resposta.put("status", 200);
+                                            resposta.put("vagas", vagas);
+                                        }
+                                    }
+                                } else {
+                                    resposta.put("status", 422);
+                                    resposta.put("mensagem", "Empresa não encontrada");
+                                }
+                            }
+                        } catch (Exception ex) {
+                            ex.printStackTrace();
+                            resposta.put("status", 404);
+                            resposta.put("mensagem", "Erro");
+                        }
+                        break;
+
+                    case "filtrarVagas":
+                        JSONObject filtros = requisicao.getJSONObject("filtros");
+                        boolean tipoIgual = filtros.getString("tipo").equals("AND");
+                        List<Object> filtroCompetencias = filtros.getJSONArray("competencias").toList();
+                        String sql = "SELECT v.id_vaga, v.nome, v.faixa_salarial, v.descricao, v.estado FROM vaga v JOIN vagacompetencia vc ON v.id_vaga=vc.id_vaga JOIN competencia c ON vc.id_competencia=c.id_competencia WHERE c.competencia IN(" + String.join(",", Collections.nCopies(filtroCompetencias.size(), "?")) + ") GROUP BY v.id_vaga";
+                        if (tipoIgual) {
+                            sql += " HAVING COUNT(vc.id_vaga_competencia) >= ?";
+                        }
+                        try (PreparedStatement vagasPS = conn.prepareStatement(sql)) {
+                            int index = 1;
+                            for (Object competencia : filtroCompetencias) {
+                                vagasPS.setString(index++, (String) competencia);
+                            }
+                            if (tipoIgual) {
+                                vagasPS.setInt(index, filtroCompetencias.size());
+                            }
+                            try (ResultSet vagasRS = vagasPS.executeQuery()) {
+                                JSONArray vagas = new JSONArray();
+                                while (vagasRS.next()) {
+                                    JSONObject vaga = new JSONObject();
+                                    vaga.put("idVaga", vagasRS.getInt("id_vaga"));
+                                    vaga.put("nomeVaga", vagasRS.getString("nome"));
+                                    vaga.put("faixaSalarial", vagasRS.getDouble("faixa_salarial"));
+                                    vaga.put("descricao", vagasRS.getString("descricao"));
+                                    vaga.put("estado", vagasRS.getString("estado"));
+                                    JSONArray competencias = new JSONArray();
+                                    try (PreparedStatement competenciasPS = conn.prepareStatement("SELECT competencia.competencia as nome FROM vagacompetencia JOIN competencia ON vagacompetencia.id_competencia = competencia.id_competencia where vagacompetencia.id_vaga = ?;")) {
+                                        competenciasPS.setInt(1, vagasRS.getInt("id_vaga"));
+                                        try (ResultSet competenciasRS = competenciasPS.executeQuery()) {
+                                            while (competenciasRS.next()) {
+                                                competencias.put(competenciasRS.getString("nome"));
+                                            }
+                                        }
+                                    }
+                                    vaga.put("competencias", competencias);
+
+                                    vagas.put(vaga);
+                                }
+                                resposta.put("status", 200);
+                                resposta.put("vagas", vagas);
+                            }
+                        } catch (Exception ex) {
+                            ex.printStackTrace();
+                            resposta.put("status", 404);
+                            resposta.put("mensagem", "Erro");
+                        }
+                        break;
+
+                    case "visualizarVaga":
+                        try (PreparedStatement vagasPS = conn.prepareStatement("SELECT faixa_salarial, descricao, estado FROM vaga where id_vaga = ?;")) {
+                            vagasPS.setInt(1, requisicao.getInt("idVaga"));
+                            try (ResultSet vagaRS = vagasPS.executeQuery()) {
+                                if (vagaRS.next()) {
+
+                                    JSONArray competencias = new JSONArray();
+                                    try (PreparedStatement competenciasPS = conn.prepareStatement("SELECT competencia.competencia as nome FROM vagacompetencia JOIN competencia ON vagacompetencia.id_competencia = competencia.id_competencia where vagacompetencia.id_vaga = ?;")) {
+                                        competenciasPS.setInt(1, requisicao.getInt("idVaga"));
+                                        try (ResultSet competenciasRS = competenciasPS.executeQuery()) {
+                                            while (competenciasRS.next()) {
+                                                competencias.put(competenciasRS.getString("nome"));
+                                            }
+                                        }
+                                    }
+
+                                    resposta.put("status", 201);
+                                    resposta.put("faixaSalarial", vagaRS.getDouble("faixa_salarial"));
+                                    resposta.put("descricao", vagaRS.getString("descricao"));
+                                    resposta.put("estado", vagaRS.getString("estado"));
+                                    resposta.put("competencias", competencias);
+                                } else {
+                                    resposta.put("status", 404);
+                                    resposta.put("mensagem", "Vaga não encontrada");
+                                }
+                            }
+                        } catch (Exception ex) {
+                            ex.printStackTrace();
+                            resposta.put("status", 404);
+                            resposta.put("mensagem", "Erro");
+                        }
+                        break;
+
+                    case "cadastrarVaga":
+                        try (PreparedStatement empresaPS = conn.prepareStatement("SELECT id_empresa FROM empresa WHERE email = ?;")) {
+                            empresaPS.setString(1, requisicao.getString("email"));
+                            try (ResultSet empresa = empresaPS.executeQuery()) {
+                                if (empresa.next()) {
+                                    try (PreparedStatement vagaPS = conn.prepareStatement("INSERT INTO vaga (id_empresa, nome, faixa_salarial, descricao, estado) VALUES (?, ?, ?, ?, ?);", Statement.RETURN_GENERATED_KEYS)) {
+                                        vagaPS.setInt(1, empresa.getInt("id_empresa"));
+                                        vagaPS.setString(2, requisicao.getString("nome"));
+                                        vagaPS.setDouble(3, requisicao.getDouble("faixaSalarial"));
+                                        vagaPS.setString(4, requisicao.getString("descricao"));
+                                        vagaPS.setString(5, requisicao.getString("estado"));
+                                        vagaPS.executeUpdate();
+
+                                        try (ResultSet generatedKeys = vagaPS.getGeneratedKeys()) {
+                                            if (generatedKeys.next()) {
+
+                                                // Associando as competencias a vaga
+                                                JSONArray competencias = requisicao.getJSONArray("competencias");
+                                                for (int i = 0; i < competencias.length(); i++) {
+                                                    try (PreparedStatement competenciaPS = conn.prepareStatement("SELECT id_competencia FROM competencia WHERE competencia = ?;")) {
+                                                        competenciaPS.setString(1, (String) competencias.get(i));
+                                                        try (ResultSet competenciaRS = competenciaPS.executeQuery()) {
+                                                            if (competenciaRS.next()) {
+                                                                try (PreparedStatement preparedStatement = conn.prepareStatement("INSERT INTO vagacompetencia (id_vaga, id_competencia) VALUES (?, ?);")) {
+                                                                    preparedStatement.setInt(1, generatedKeys.getInt(1));
+                                                                    preparedStatement.setInt(2, competenciaRS.getInt("id_competencia"));
+                                                                    preparedStatement.executeUpdate();
+                                                                }
+                                                                resposta.put("status", 201);
+                                                                resposta.put("mensagem", "Vaga cadastrada com sucesso");
+
+                                                            } else {
+                                                                resposta.put("status", 422);
+                                                                resposta.put("mensagem", "Competência não encontrada");
+                                                            }
+                                                        }
+                                                    }
+                                                }
+
+                                            } else {
+                                                resposta.put("status", 422);
+                                                resposta.put("mensagem", "Falha ao criar vaga");
+                                            }
+                                        }
+                                    }
+                                } else {
+                                    resposta.put("status", 422);
+                                    resposta.put("mensagem", "Empresa não encontrada");
+                                }
+                            }
+                        } catch (Exception ex) {
+                            ex.printStackTrace();
+                            resposta.put("status", 422);
+                            resposta.put("mensagem", "Erro");
+                        }
+                        break;
+
+                    case "atualizarVaga":
+                        try (PreparedStatement vagaPS = conn.prepareStatement("UPDATE vaga SET nome = ?, faixa_salarial = ?, descricao = ?, estado = ? WHERE id_vaga = ?;")) {
+                            vagaPS.setString(1, requisicao.getString("nome"));
+                            vagaPS.setDouble(2, requisicao.getDouble("faixaSalarial"));
+                            vagaPS.setString(3, requisicao.getString("descricao"));
+                            vagaPS.setString(4, requisicao.getString("estado"));
+                            vagaPS.setInt(5, requisicao.getInt("idVaga"));
+                            vagaPS.executeUpdate();
+
+                            try (PreparedStatement apagarCompetenciasPS = conn.prepareStatement("DELETE FROM vagacompetencia WHERE id_vaga = ?;")) {
+                                apagarCompetenciasPS.setInt(1, requisicao.getInt("idVaga"));
+                                apagarCompetenciasPS.executeUpdate();
+
+                                // Associando as competencias a vaga
+                                JSONArray competencias = requisicao.getJSONArray("competencias");
+                                for (int i = 0; i < competencias.length(); i++) {
+                                    try (PreparedStatement competenciaPS = conn.prepareStatement("SELECT id_competencia FROM competencia WHERE competencia = ?;")) {
+                                        competenciaPS.setString(1, (String) competencias.get(i));
+                                        try (ResultSet competenciaRS = competenciaPS.executeQuery()) {
+                                            if (competenciaRS.next()) {
+                                                try (PreparedStatement preparedStatement = conn.prepareStatement("INSERT INTO vagacompetencia (id_vaga, id_competencia) VALUES (?, ?);")) {
+                                                    preparedStatement.setInt(1, requisicao.getInt("idVaga"));
+                                                    preparedStatement.setInt(2, competenciaRS.getInt("id_competencia"));
+                                                    preparedStatement.executeUpdate();
+                                                }
+                                                resposta.put("status", 201);
+                                                resposta.put("mensagem", "Vaga atualizada com sucesso");
+                                            } else {
+                                                resposta.put("status", 422);
+                                                resposta.put("mensagem", "Competência não encontrada");
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+
+                        } catch (Exception ex) {
+                            ex.printStackTrace();
+                            resposta.put("status", 422);
+                            resposta.put("mensagem", "Erro");
+                        }
+                        break;
+
+                    case "apagarVaga":
+                        try (PreparedStatement apagarCompetenciasPS = conn.prepareStatement("DELETE FROM vagacompetencia WHERE id_vaga = ?;")) {
+                            apagarCompetenciasPS.setInt(1, requisicao.getInt("idVaga"));
+                            apagarCompetenciasPS.executeUpdate();
+
+                            try (PreparedStatement vagaPS = conn.prepareStatement("DELETE FROM vaga WHERE id_vaga = ?")) {
+                                vagaPS.setInt(1, requisicao.getInt("idVaga"));
+                                vagaPS.executeUpdate();
+
+                                resposta.put("status", 201);
+                                resposta.put("mensagem", "Vaga apagada com sucesso");
+                            }
+
+                        } catch (Exception ex) {
+                            ex.printStackTrace();
+                            resposta.put("status", 422);
                             resposta.put("mensagem", "Erro");
                         }
                         break;
